--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.10.0",
+    "@auth/prisma-adapter": "^2.10.0",
+    "@prisma/client": "^6.12.0",
     "autoprefixer": "^10.4.21",
     "axios": "^1.11.0",
+    "bcryptjs": "^3.0.2",
+    "mongodb": "^6.18.0",
     "next": "15.4.4",
+    "next-auth": "^5.0.0-beta.29",
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "swr": "^2.3.4",
     "tailwindcss": "^3.4.13"
   },
   "devDependencies": {
@@ -24,6 +31,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.4",
+    "prisma": "^6.12.0",
     "typescript": "^5"
   }
 }
