--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "prisma generate && prisma migrate deploy && next build",
+    "build": "prisma generate && DIRECT_URL=$DIRECT_URL prisma migrate deploy && next build",
     "start": "next start",
     "lint": "next lint"
   },
