--- a/package.json
+++ b/package.json
@@ -4,20 +4,17 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "prisma generate && next build",
+    "build": "prisma generate && prisma migrate deploy && next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/mongodb-adapter": "^3.10.0",
-    "@auth/prisma-adapter": "^2.10.0",
     "@prisma/client": "^6.12.0",
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.48.0",
     "autoprefixer": "^10.4.21",
     "axios": "^1.11.0",
-    "bcryptjs": "^3.0.2",
-    "mongodb": "^6.18.0",
     "next": "15.4.4",
-    "next-auth": "^5.0.0-beta.29",
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
